<resources>
    <string name="app_name">DublinBikes</string>
    <string name="google_maps_key">AIzaSyCBeQ3jmE4TT1_LziopZUOeiquQ7Sv5a_g</string>
    <string name="no_tweets">No tweets</string>
    <string name="map_title">Map</string>
    <string name="bookmarks_title">Bookmarks</string>
    <string name="tweets_title">Tweets</string>
    <string name="available_slots">Available slots:</string>
    <string name="available_bikes">Available bikes:</string>
    <string name="common_ok">OK</string>
    <string name="error_message_title">Oops.. something went wrong!</string>
    <string name="error_message_internet">Please check your internet connection</string>
    <string name="close_content_desc">Close</string>
    <string name="slots_icon_content_desc">Slots icon</string>
    <string name="last_update">Last update - </string>
    <string name="bike_stands">Bike stands - </string>
    <string name="app_name_title">Dublin Bikes</string>
    <string name="login_text_helper">Or login with your email</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="continue_as_guest">Continue as Guest</string>
    <string name="message_unsuccess">Login failed, please check your email or password again</string>
    <string name="common_email_error_invalid">Email entered is invalid!</string>
    <string name="common_invalid_password">Password field does not match!</string>
    <string name="confirm_password">Confirm password</string>
    <string name="common_continue">Continue</string>
    <string name="create_an_account">Create an account</string>
    <string name="home">Home</string>
    <string name="log_out">Log out</string>
    <string name="invite">Share</string>
    <string name="stations_tab_title">Stations</string>
    <string name="login_success_text">Login success</string>
    <string name="invitation_title">Dublin Bikes Invite</string>
    <string name="invitation_message">Check out the Dublin Bikes app to find your station</string>
    <string name="invitation_cta">Dublin Bikes Invite</string>
</resources>
