<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_gravity="bottom"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/infoRl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="3.4 kms"/>

            <TextView
                android:id="@+id/nameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distance"
                android:textAllCaps="true"
                android:textSize="@dimen/text_size_large"
                tools:text="Lime Street"/>

            <TextView
                android:id='@+id/addressTv'
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nameTv"
                tools:text="Lime Street"/>

            <ImageButton
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/close_content_desc"
                android:background="@drawable/ic_clear"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bikeInfoRl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/infoRl"
            android:padding="@dimen/spacing_normal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/bikesIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_directions_bike"/>

                <TextView
                    android:id="@+id/availLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/available_bikes"/>

                <TextView
                    android:id="@+id/bikesTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_small"
                    tools:textColor="@color/colorGreen"
                    tools:text="20"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:id="@+id/slotsIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:contentDescription="@string/slots_icon_content_desc"
                    android:src="@drawable/ic_local_parking"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_small"
                    android:text="@string/available_slots"/>

                <TextView
                    android:id="@+id/slotsTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:textColor="@color/colorRed"
                    android:layout_marginEnd="@dimen/spacing_normal"
                    android:padding="@dimen/spacing_small"
                    tools:text="5"/>

            </LinearLayout>


        </RelativeLayout>

        <View
            android:id="@+id/lineSeparator"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/bikeInfoRl"
            android:background="@drawable/line_separator"
            android:padding="@dimen/spacing_normal"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bikeInfoRl"
            android:padding="@dimen/spacing_normal">

            <TextView
                android:id="@+id/statusTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="OPEN"
                tools:textColor="@color/colorGreen"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true">

                <TextView
                    android:id="@+id/updateLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_update"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/updateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="14 mins ago"/>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>